--- a/cofunding/cofunding-web/src/main/webapp/WEB-INF/web.xml
+++ b/cofunding/cofunding-web/src/main/webapp/WEB-INF/web.xml
@@ -10,4 +10,14 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ImageServlet</display-name>
+    <servlet-name>ImageServlet</servlet-name>
+    <servlet-class>funding.cofunding.mBeans.ImageServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ImageServlet</servlet-name>
+    <url-pattern>/ImageServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
